--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>MFEE32_27_褚婉晴</h1>
-									<p>簡介</p>
+									<p>作品</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/commidity_12.jpg" alt="" />
 								</a>
 							</article>
 
@@ -48,24 +48,24 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="genter/index.html" class="image fit" target="_blank"><img src="images/pic01.jpg" alt=""></a>
+											<a href="hungry/tired.html" class="image fit" ><img src="images/1.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="weather/index.html" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="js_ball/breakoutGame.html" class="image fit"><img src="images/2.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="YTvideo/index.html" class="image fit"><img src="images/3.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="newsRss/index.html" class="image fit"><img src="images/4.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="weather/index.html" class="image fit"><img src="images/5.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/6.png" alt=""></a>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
+										<!-- <div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -82,7 +82,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
+										</div> -->
 									</div>
 								</section>
 							</article>
