--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 											<a href="newsRss/index.html" class="image fit"><img src="images/4.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="weather/index.html" class="image fit"><img src="images/5.png" alt=""></a>
+											<a href="weather2/index.html" class="image fit"><img src="images/5.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/6.png" alt=""></a>
